# tokenizer-datamodels

./: pyproject.toml
tokenizerdatamodels/: decoders.py  normalizers.py  pretokenizers.py
tokenizerdatamodels/custom/: __init__.py
